force-app/main/default/objects/FulfilmentTypeStatus__c/FulfilmentTypeStatus__c.object-meta.xml
<CustomObject>
    <description>A place to store specific process details for each stage for each type</description>
    <label>Fulfilment Type Status</label>
    <nameField>
        <label>Fulfilment Type Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fulfilment Type Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>