force-app/main/default/objects/FulfilmentTypeStatus__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <externalId>true</externalId>
    <label>Developer Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>