force-app/main/default/objects/FulfilmentTypeStatus__c/fields/FulfilmentType__c.field-meta.xml
<CustomField>
    <fullName>FulfilmentType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The fulfilment type that this process point relates to</description>
    <label>Fulfilment type</label>
    <referenceTo>FulfilmentType__c</referenceTo>
    <relationshipLabel>Fulfilment Type Statuses</relationshipLabel>
    <relationshipName>FulfilmentTypeStatuses</relationshipName>
    <type>Lookup</type>
</CustomField>