force-app/main/default/objects/FulfilmentTypeStatus__c/fields/FulfilmentTypeReference__c.field-meta.xml
<CustomField>
    <fullName>FulfilmentTypeReference__c</fullName>
    <description>Used to refer to the fulfilment type without using the record ID</description>
    <label>Fulfilment type reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>