force-app/main/default/objects/FulfilmentTypeStatus__c/fields/NextStatus__c.field-meta.xml
<CustomField>
    <fullName>NextStatus__c</fullName>
    <description>The status which comes after this one</description>
    <label>Next status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chase client payment</fullName>
            </value>
            <value>
                <fullName>Chase transfer</fullName>
            </value>
            <value>
                <fullName>Chase provider</fullName>
            </value>
            <value>
                <fullName>Chase client action</fullName>
            </value>
            <value>
                <fullName>Await first regular</fullName>
            </value>
            <value>
                <fullName>Investment checks</fullName>
            </value>
            <value>
                <fullName>Awaiting ad hoc action</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>