force-app/main/default/objects/FulfilmentTypeStatus__c/fields/RelatedFlow__c.field-meta.xml
<CustomField>
    <fullName>RelatedFlow__c</fullName>
    <description>The screen flow which should be displayed on this fulfilment type at this status</description>
    <label>Related flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>