force-app/main/default/objects/FulfilmentTypeStatus__c/fields/RelatedTaskInformation__c.field-meta.xml
<CustomField>
    <fullName>RelatedTaskInformation__c</fullName>
    <description>The task which should be created when a piece of fulfilment with this type reaches this status</description>
    <label>Related task information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>