force-app/main/default/objects/FulfilmentTypeStatus__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status that this process detail relates to</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>