force-app/main/default/objects/FulfilmentTypeStatus__c/listViews/Investment_checks.listView-meta.xml
<ListView>
    <fullName>Investment_checks</fullName>
    <columns>NAME</columns>
    <columns>Tasks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Investment checks</value>
    </filters>
    <label>Investment checks</label>
</ListView>